# TPI_Signals_Gonzalez-Ferreira

./: README.md  pyproject.toml
source/: #Clase ECGSignal.py  EMGSignal.py  MotorGráfico.py  RawSignal.py  SignalProcessor.py  epocas.py  info_señal.py  metodos.py  motor_grafico.py
source/Biosignals/Epocas/: epocas.py
source/Biosignals/Eventos/: Anotaciones.py  Eventos.py
source/Biosignals/Info/: Info.py
src/biosignals/info/: Info.py
test/: demoMotorGráfico.py  demo_motor_grafico.py  testInfo.py  testMotorGráfico.py  testRawSignal.py  test_anotaciones.py  test_dataset.py  test_ecg.py  test_eeg.py  test_emg.py  test_epocas.py  test_eventos.py  test_extraer_caracteristicas.py  test_info.py  test_loader.py  test_motor_grafico.py  test_raw_signal.py  test_signal_processor.py
test/archivos de prueba/: Antebrazo federico 1.txt  Antebrazo federico 2.txt  Biceps federico 1.txt  Biceps federico 2.txt  Camilo 30 seg sentado.txt  Federico 30 seg sentado.txt  Federico Invertido.txt  Prueba_con_EEG.py  Registro 1 eeg.txt  Registro 2 eeg.txt  Registro 3 eeg.txt  camilo ejercicio  60 seg.txt  ecg_registro_1763072727.csv  ecg_registro_1763073963.csv  ecg_registro_1763140111.csv  ecg_registro_1763140302.csv  ecg_registro_1763140959.csv  ecg_registro_1763142076.csv  ecg_registro_1763144299.csv  ecg_registro_1763145244.csv  ecg_registro_1763145467.csv  ecg_registro_1763145844.csv  ecg_registro_1763146200.csv  ecg_registro_1763146376.csv  ecg_registro_1763405813.csv  ecg_registro_1763406789.csv  ecg_registro_1763406978.csv  ecg_registro_1763408162.csv  ecg_registro_completo.csv
(+20 files in other folders)
